--- a/src/globals.css
+++ b/src/globals.css
@@ -78,6 +78,10 @@
     @apply text-[24px] font-bold leading-[140%] tracking-tighter;
   }
 
+  .base-bold {
+    @apply text-[16px] font-bold leading-[140%] tracking-tighter;
+  }
+
   .base-semibold {
     @apply text-[16px] font-semibold leading-[140%] tracking-tighter;
   }
@@ -96,6 +100,10 @@
 
   .body-medium {
     @apply text-[18px] font-medium leading-[140%];
+  }
+
+  .small-bold {
+    @apply text-[14px] font-bold leading-[140%] tracking-tighter;
   }
 
   .small-semibold {
